<resources>
	<string name="app_name">Daan Student Assistant</string>
	<string name="team_name">Kesshou</string>
	<string name="unauthorized">Wrong ID or password</string>
	<string name="illegalcontent">Illegal Content</string>
	<string name="school_unauthorized">Unauthorized</string>
	<string name="token_expired">Token Expired</string>
	<string name="id_used">This account has already been used</string>

	<string name="login_account">Login</string>
	<string name="login_account_account">Account(email)</string>
	<string name="login_account_pwd">Password</string>
	<string name="login_account_new">Sign Up</string>

	<string name="regist_step_next">Next</string>
	<string name="regist_step_pre">Previous</string>
	<string name="regist_step_agree">I Agree</string>
	<string name="regist_step_finish">Finish</string>

	<string name="regist_group">User Group</string>
	<string name="regist_group_help">We will provide the service based on different users.</string>
	<string name="regist_group_stu">Vocational School Student</string>
	<string name="regist_group_night">Countinuing School student</string>
	<string name="regist_group_gud">Graduated Student</string>

	<string name="regist_school">School System</string>
	<string name="regist_school_help">We will use this account to get informations.</string>
	<string name="regist_school_account">Student ID Number</string>
	<string name="regist_school_pwd">School Password(Personal ID)</string>

	<string name="regist_account">Regist Account</string>
	<string name="regist_account_help">You will use this account to get service.</string>
	<string name="regist_account_nick">Nickname</string>
	<string name="regist_account_account">Email</string>
	<string name="regist_account_pwd">Password</string>
	<string name="regist_account_repwd">Repeat Passord</string>

	<string name="regist_terms">User Terms</string>
	<string name="regist_terms_help">Please read through the user terms (the link below) \n if agreed, click Next,please.</string>
	<string name="regist_terms_href">https://kesshou.dacsc.club/v1/static/userterm.pdf</string>

	<string name="regist_loading">Loading to Start&#8230;&#8230;&#8230;</string>
	<string name="regist_loading_help">Wish You A Good Day At School.</string>

	<string name="regist_error_empty">DO NOT LEAVE A BLANK</string>
	<string name="regist_error_email">Email is not correct.</string>
	<string name="regist_error_pwd">Password and re-password are different.</string>

	<string name="loading_text">Loading</string>

	<string name="main_infor_username">User Group</string>
	<string name="main_infor_name">Name</string>
	<string name="main_infor_nick">Nickname</string>
	<string name="main_infor_timetable">Curriculum</string>
	<string name="main_infor_timetable_help">Curriculum of this Semester</string>
	<string name="main_infor_record">Attendance Record</string>
	<string name="main_infor_record_help">Attendance Record of Current Semester</string>
	<string name="main_infor_prize">Reward and Punishment Record</string>
	<string name="main_infor_prize_help">Reward and Punishment Record</string>
	<string name="main_infor_grade1">Mid-terms and Final Grades</string>
	<string name="main_infor_grade1_help">Mid-terms and Final Grades</string>
	<string name="main_infor_grade2">Semester Results</string>
	<string name="main_infor_grade2_help">Semester Results</string>

	<string name="main_news_calc">Calendar</string>
	<string name="main_news_calc_help">Calendar</string>
	<string name="main_news_news">School Announcement</string>
	<string name="main_news_news_help">School Announcement</string>
	<string name="main_news_map">School Map</string>
	<string name="main_news_map_help">School Map</string>
	<string name="main_news_foodmap">Food Map</string>
	<string name="main_news_foodmap_help">Food Map</string>
	<string name="main_news_seatstate">Study Room Seat Status</string>
	<string name="main_news_seatstate_help">Study Room Seat Status</string>
	<string name="main_news_rule">School Rules</string>
	<string name="main_news_rule_help">School Rules</string>
	<string name="main_news_qanda">School Q&#38;A</string>
	<string name="main_news_qanda_help">School Q&#38;A</string>
	<string name="main_news_daanabout">About Daan</string>
	<string name="main_news_daanabout_help">Daan about</string>

	<string name="main_menu_medata">Personal Information</string>
	<string name="main_menu_medata_help">Personal Information</string>
	<string name="main_meun_wifi">Automatically Conecting to School Wi-fi</string>
	<string name="main_meun_wifi_help">Automatically Conecting to School Wi-fi</string>
	<string name="main_menu_noti">Notification Settings</string>
	<string name="main_menu_noti_help">Notification Settings</string>
	<string name="main_menu_opinion">Feedback</string>
	<string name="main_menu_opinion_help">Feedback</string>
	<string name="main_menu_lang">Language Settings</string>
	<string name="main_menu_lang_help">Language Settings</string>
	<string name="main_menu_about">About Developers</string>
	<string name="main_menu_about_help">About Developers</string>
	<string name="main_menu_logout">Log out</string>

	<string name="infor_top_item_absence">Absence</string>
	<string name="infor_top_item_late">Late</string>
	<string name="infor_top_item_cutting">Cutting</string>
	<string name="infor_top_item_public_leave">Official Leave</string>
	<string name="infor_top_item_sick_leave">Sick_Leave</string>
	<string name="infor_top_item_thing_leave">Personal_leave</string>
	<string name="infor_top_item_dead_leave">Funeral_leave</string>

	<string name="infor_top_item_smallcite">Commendation</string>
	<string name="infor_top_item_middlecite">Minor Merit</string>
	<string name="infor_top_item_bigcite">Major Merit</string>
	<string name="infor_top_item_smallfault">Admonition</string>
	<string name="infor_top_item_middlefault">Minor Demerit</string>
	<string name="infor_top_item_bigfault">Major Demerit</string>

	<string name="infor_grade2_grade1">Freshman</string>
	<string name="infor_grade2_grade2">Junior</string>
	<string name="infor_grade2_grade3">Senior</string>

	<string name="infor_grade2_semember1">1st semester</string>
	<string name="infor_grade2_semember2">2nd semester</string>

	<string name="menu_info_info">Enter the previous password</string>
	<string name="menu_info_old_password">Previous Password Required</string>
	<string name="menu_info_new_school_pwd">New School Password Required(Personal ID No.)</string>
	<string name="menu_info_new_nick">New NicknameRRequired</string>
	<string name="menu_info_new_account">New Email Required</string>
	<string name="menu_info_new_password">New PasswordRRequired</string>
	<string name="menu_info_send">Send</string>

	<string name="opinion_something_fail">Something Fail</string>
	<string name="opinion_lag_issue">Lag Issue</string>
	<string name="opinion_program_error">Program Error</string>
	<string name="opinion_suggestion">Suggestion</string>

	<string name="menu_is_noti">Do you want to get notifications?</string>

	<string name="version">Powered by Kesshou® , DaanX v2.0.0</string>

	<string name="no_data">No Data</string>
</resources>