<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/rel"
tools:context=".views.Regist.GroupFragment">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/topPanel"
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:text="@string/regist_group"
				android:textSize="30sp"
				android:textColor="@color/white"
				android:background="@color/colorPrimary"

				android:paddingStart="@dimen/regist_hl_padding"
				android:paddingEnd="@dimen/regist_hl_padding"
				android:paddingTop="16dp"
				android:paddingBottom="16dp"

				android:elevation="5dp"

				android:gravity="bottom"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="@dimen/regist_hl_padding"
				android:paddingEnd="@dimen/regist_hl_padding"
				android:paddingTop="32dp"
				android:paddingBottom="14dp"
				android:textSize="20sp"
				android:textColor="@color/black"
				android:text="@string/regist_group_help"/>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="@dimen/regist_hl_padding"
				android:paddingEnd="@dimen/regist_hl_padding">

				<android.support.v7.widget.AppCompatButton
					android:id="@+id/DayButton"
					android:layout_weight="1"
					android:layout_width="match_parent"
					android:layout_height="100dp"
					android:padding="0dp"
					android:theme="@style/BlueButton"
					android:text="@string/regist_group_stu"
					android:textSize="16sp"/>

				<android.support.v7.widget.AppCompatButton
					android:id="@+id/NightButton"
					android:layout_weight="1"
					android:layout_width="match_parent"
					android:layout_height="100dp"
					android:padding="0dp"
					android:theme="@style/RedButton"
					android:text="@string/regist_group_night"
					android:textSize="16sp"/>
			</LinearLayout>

			<android.support.v7.widget.AppCompatButton
				android:id="@+id/GudButton"
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:layout_marginStart="@dimen/regist_hl_padding"
				android:layout_marginEnd="@dimen/regist_hl_padding"
				android:theme="@style/GreyButton"
				android:text="@string/regist_group_gud"
				android:textSize="16sp"/>


		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:id="@+id/footer"
		android:layout_width="fill_parent"
		android:layout_height="60dp"
		android:orientation="horizontal"
		android:layout_alignParentBottom="true"
		android:background="@color/grey_300"
		android:paddingStart="26dp"
		android:paddingEnd="26dp"
		android:paddingTop="8dp"
		android:paddingBottom="8dp">

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/PreButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/regist_step_pre"
			android:textSize="20sp"
			style="@style/GreyButton"/>

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@drawable/flow1"/>


		<android.support.v7.widget.AppCompatButton
			android:id="@+id/NextButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/regist_step_next"
			android:textSize="20sp"
			android:visibility="invisible"
			style="@style/GreyButton" />
	</LinearLayout>
</RelativeLayout>



