<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".views.regist.TermsFragment">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/topPanel"
				android:layout_width="match_parent"
				android:layout_height="150dp"
				android:text="@string/regist_terms"
				android:textSize="24sp"
				android:textColor="@color/white"
				android:background="@color/colorPrimary"

				android:paddingStart="@dimen/regist_hl_padding"
				android:paddingEnd="@dimen/regist_hl_padding"
				android:paddingTop="16dp"
				android:paddingBottom="16dp"

				android:elevation="5dp"

				android:gravity="bottom"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="@dimen/regist_hl_padding"
				android:paddingEnd="@dimen/regist_hl_padding"
				android:paddingTop="32dp"
				android:paddingBottom="16dp"
				android:textSize="18sp"
				android:textColor="@color/black"
				android:text="@string/regist_terms_help"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="@dimen/regist_hl_padding"
				android:paddingEnd="@dimen/regist_hl_padding"
				android:textSize="18sp"
				android:textColor="@color/black"
				android:autoLink="web"
				android:maxLines="1"
				android:text="@string/regist_terms_href"/>


		</LinearLayout>
	</ScrollView>


	<LinearLayout
		android:id="@+id/footer"
		android:layout_width="fill_parent"
		android:layout_height="60dp"
		android:orientation="horizontal"
		android:layout_alignParentBottom="true"
		android:background="@color/grey_300"
		android:paddingStart="26dp"
		android:paddingEnd="26dp"
		android:paddingTop="8dp"
		android:paddingBottom="8dp">

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/PreButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/regist_step_pre"
			android:textSize="20sp"
			style="@style/GreyButton"/>

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:src="@drawable/flow5"/>


		<android.support.v7.widget.AppCompatButton
			android:id="@+id/NextButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/regist_step_agree"
			android:textSize="20sp"
			style="@style/GreyButton" />
	</LinearLayout>
</RelativeLayout>


