<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/amber_700"
              android:paddingStart="@dimen/regist_hl_padding"
              android:paddingEnd="@dimen/regist_hl_padding"
              android:paddingTop="0dp"
              android:paddingBottom="0dp"
              tools:context="kesshou.android.daanx.views.regist.LoginFragment">

	<!-- TODO: Update blank fragment layout -->


	<LinearLayout
		android:orientation="vertical"
		android:background="@drawable/login_background"
		android:padding="16dp"
		android:layout_centerInParent="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:layout_gravity="center"
			android:id="@+id/imageView"
			android:padding="35dp"
			android:src="@mipmap/kesshou"/>
		<android.support.design.widget.TextInputLayout
			android:id="@+id/til_input_account"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"

			app:errorTextAppearance="@style/TextInputError">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/input_account"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:textSize="18sp"
				android:hint="@string/login_account_account"/>
		</android.support.design.widget.TextInputLayout>
		<!--android:textColorHint="@color/white"-->
		<!--android:textColorHint="@color/white"-->
		<android.support.design.widget.TextInputLayout
			android:id="@+id/til_input_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"

			app:errorTextAppearance="@style/TextInputError">
			<android.support.design.widget.TextInputEditText
				android:id="@+id/input_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:textSize="18sp"
				android:hint="@string/login_account_pwd"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/LoginButton"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:padding="0dp"
			android:layout_marginTop="16dp"
			android:theme="@style/BlueButton"
			android:text="@string/login_account"
			android:textSize="20sp"/>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/RegistButton"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:padding="0dp"
			android:theme="@style/RedButton"
			android:text="@string/login_account_new"
			android:textSize="20sp"/>
	</LinearLayout>



</RelativeLayout>
